--- a/OlinJa/src/main/res/layout/session_dialog.xml
+++ b/OlinJa/src/main/res/layout/session_dialog.xml
@@ -23,23 +23,27 @@
         android:id = "@+id/dialog_assignment"
         android:layout_below = "@id/dialog_title"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_alignParentLeft="true"
         android:text = "@string/dialog_input_assignment"
         android:textSize = "@dimen/session_sub_font"
+        android:gravity = "center_vertical"
         />
 
     <EditText
         android:id = "@+id/dialog_input_assignment"
         android:layout_alignBottom="@id/dialog_assignment"
-        android:layout_height="wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
+        android:layout_toRightOf="@id/dialog_assignment"
         android:hint="@string/dialog_hint_assignment"
         android:textSize = "@dimen/session_sub_font"/>
 
     <View
         android:id = "@+id/divider_assignment"
+        android:paddingTop = "@dimen/divider_margin"
+        android:paddingBottom = "@dimen/divider_margin"
         android:layout_below = "@id/dialog_input_assignment"
         android:layout_width = "match_parent"
         android:layout_height = "@dimen/divider_height"
@@ -47,9 +51,10 @@
 
     <TextView
         android:id = "@+id/dialog_place"
+        android:gravity = "center_vertical"
         android:layout_below = "@id/divider_assignment"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_alignParentLeft="true"
         android:text = "@string/dialog_input_place"
         android:textSize = "@dimen/session_sub_font"
@@ -58,9 +63,9 @@
     <EditText
         android:id = "@+id/dialog_input_place"
         android:layout_alignBottom="@id/dialog_place"
-        android:layout_height="wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@id/dialog_input_assignment"
         android:hint="@string/dialog_hint_place"
         android:textSize = "@dimen/session_sub_font"/>
 
@@ -68,14 +73,17 @@
         android:id = "@+id/divider_place"
         android:layout_below = "@id/dialog_input_place"
         android:layout_width = "match_parent"
+        android:paddingTop = "@dimen/divider_margin"
+        android:paddingBottom = "@dimen/divider_margin"
         android:layout_height = "@dimen/divider_height"
         android:background = "@android:color/black"/>
 
     <TextView
         android:id = "@+id/dialog_date"
+        android:gravity = "center_vertical"
         android:layout_below = "@id/divider_place"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_alignParentLeft="true"
         android:text = "@string/dialog_input_time"
         android:textSize = "@dimen/session_sub_font"
@@ -85,14 +93,16 @@
         android:id = "@+id/dialog_input_date"
         android:inputType="date"
         android:layout_alignBottom="@id/dialog_date"
-        android:layout_height="wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@id/dialog_input_assignment"
         android:hint="@string/dialog_hint_date"
         android:textSize = "@dimen/session_sub_font"/>
 
     <View
         android:id = "@+id/divider_date"
+        android:paddingTop = "@dimen/divider_margin"
+        android:paddingBottom = "@dimen/divider_margin"
         android:layout_below = "@id/dialog_input_date"
         android:layout_width = "match_parent"
         android:layout_height = "@dimen/divider_height"
@@ -100,10 +110,11 @@
 
     <TextView
         android:id = "@+id/dialog_time"
+        android:gravity = "center_vertical"
         android:inputType="time"
         android:layout_below = "@id/divider_date"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_alignParentLeft="true"
         android:text = "@string/dialog_input_time"
         android:textSize = "@dimen/session_sub_font"
@@ -112,14 +123,16 @@
     <EditText
         android:id = "@+id/dialog_input_time"
         android:layout_alignBottom="@id/dialog_time"
-        android:layout_height="wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@id/dialog_input_assignment"
         android:hint="@string/dialog_hint_time"
         android:textSize = "@dimen/session_sub_font"/>
 
     <View
         android:id = "@+id/divider_time"
+        android:paddingTop = "@dimen/divider_margin"
+        android:paddingBottom = "@dimen/divider_margin"
         android:layout_below = "@id/dialog_input_time"
         android:layout_width = "match_parent"
         android:layout_height = "@dimen/divider_height"
@@ -127,9 +140,10 @@
 
     <TextView
         android:id = "@+id/dialog_duration"
+        android:gravity = "center_vertical"
         android:layout_below = "@id/divider_time"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_alignParentLeft="true"
         android:text = "@string/dialog_input_time"
         android:textSize = "@dimen/session_sub_font"
@@ -138,13 +152,15 @@
     <EditText
         android:id = "@+id/dialog_input_duration"
         android:layout_alignBottom="@id/dialog_duration"
-        android:layout_height="wrap_content"
+        android:layout_height = "@dimen/dialog_row_height"
         android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@id/dialog_input_assignment"
         android:hint="@string/dialog_hint_time"
         android:textSize = "@dimen/session_sub_font"/>
 
     <View
+        android:paddingTop = "@dimen/divider_margin"
+        android:paddingBottom = "@dimen/divider_margin"
         android:id = "@+id/divider_duration"
         android:layout_below = "@id/dialog_input_duration"
         android:layout_width = "match_parent"
@@ -153,9 +169,31 @@
 
     <Button
         android:id = "@+id/dialog_cancel"
+        android:gravity = "center"
         android:layout_height = "@dimen/button_height"
         android:layout_width = "@dimen/button_width"
-        android:layout_alignParentBottom="true"
+        android:layout_below = "@id/divider_duration"
+        android:background = "@android:color/transparent"
+        android:text = "@string/dialog_cancel"
         android:layout_alignParentLeft="true"/>
+
+    <View
+        android:id = "@+id/button_divider"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop = "@dimen/divider_top"
+        android:layout_toRightOf = "@id/dialog_cancel"
+        android:layout_width = "@dimen/divider_height"
+        android:layout_height = "@dimen/button_divider"
+        android:background = "@android:color/black"/>
+
+    <Button
+        android:id = "@+id/dialog_create"
+        android:gravity = "center"
+        android:layout_height = "@dimen/button_height"
+        android:layout_width = "@dimen/button_width"
+        android:layout_below = "@id/divider_duration"
+        android:background = "@android:color/transparent"
+        android:text = "@string/dialog_create"
+        android:layout_toRightOf = "@id/button_divider"/>
 
 </RelativeLayout>
