--- a/OlinJa/src/main/res/layout/session_dialog.xml
+++ b/OlinJa/src/main/res/layout/session_dialog.xml
@@ -3,10 +3,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:layout_marginLeft = "@dimen/dialog_marginLeft"
-    android:layout_marginRight = "@dimen/dialog_marginRight">
+    >
     <TextView
         android:id = "@+id/dialog_title"
         android:layout_height = "wrap_content"
@@ -21,6 +20,7 @@
 
     <TextView
         android:id = "@+id/dialog_assignment"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
         android:layout_below = "@id/dialog_title"
         android:layout_width = "wrap_content"
         android:layout_height = "@dimen/dialog_row_height"
@@ -51,6 +51,7 @@
 
     <TextView
         android:id = "@+id/dialog_place"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
         android:gravity = "center_vertical"
         android:layout_below = "@id/divider_assignment"
         android:layout_width = "wrap_content"
@@ -80,6 +81,7 @@
 
     <TextView
         android:id = "@+id/dialog_date"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
         android:gravity = "center_vertical"
         android:layout_below = "@id/divider_place"
         android:layout_width = "wrap_content"
@@ -110,6 +112,7 @@
 
     <TextView
         android:id = "@+id/dialog_time"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
         android:gravity = "center_vertical"
         android:layout_below = "@id/divider_date"
         android:layout_width = "wrap_content"
@@ -139,6 +142,7 @@
 
     <TextView
         android:id = "@+id/dialog_duration"
+        android:layout_marginLeft = "@dimen/dialog_marginLeft"
         android:gravity = "center_vertical"
         android:layout_below = "@id/divider_time"
         android:layout_width = "wrap_content"
@@ -178,7 +182,7 @@
 
     <View
         android:id = "@+id/button_divider"
-        android:layout_alignParentBottom="true"
+        android:layout_below = "@id/divider_duration"
         android:layout_marginTop = "@dimen/divider_top"
         android:layout_toRightOf = "@id/dialog_cancel"
         android:layout_width = "@dimen/divider_height"
