--- a/OlinJa/src/main/res/values/dimens.xml
+++ b/OlinJa/src/main/res/values/dimens.xml
@@ -20,4 +20,9 @@
 
     <dimen name="button_width">150dp</dimen>
     <dimen name="button_height">60dp</dimen>
+
+    <dimen name="session_panel_width">180dp</dimen>
+    <dimen name="session_title_height">40dp</dimen>
+    <dimen name="session_title_padding">5dp</dimen>
     </resources>
+
