--- a/OlinJa/src/main/res/values/dimens.xml
+++ b/OlinJa/src/main/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="session_panel_width">180dp</dimen>
     <dimen name="session_title_height">40dp</dimen>
     <dimen name="session_title_padding">5dp</dimen>
+    <dimen name="session_title_font">26sp</dimen>
     </resources>
 
