--- a/OlinJa/src/main/res/layout/activity_main.xml
+++ b/OlinJa/src/main/res/layout/activity_main.xml
@@ -3,12 +3,13 @@
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10px"
     tools:context=".MainActivity">
 
     <TextView
         android:id = "@+id/all_session_title"
-        android:layout_width = "wrap_content"
+        android:background="@color/olin_blue"
+        android:textColor="#fdfdfd"
+        android:layout_width = "fill_parent"
         android:padding = "@dimen/session_title_padding"
         android:layout_height = "wrap_content"
         android:textSize = "@dimen/session_title_font"
@@ -20,6 +21,7 @@
         android:layout_height = "match_parent"
         android:layout_width = "match_parent"
         android:divider="@color/divider_color"
+        android:padding="@dimen/activity_vertical_margin"
         android:layout_below="@+id/all_session_title"
         />
 
