--- a/OlinJa/src/main/res/layout/session_list_item.xml
+++ b/OlinJa/src/main/res/layout/session_list_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    >
     <TextView
         android:id = "@+id/session_title"
         android:layout_width = "fill_parent"
         android:layout_height = "wrap_content"
         android:text="@string/session_example_title"
-        android:textColor="#ffffff"
-        android:background="#000000"
+        android:background="#eeeeee"
         android:textSize="25sp"
         />
 
@@ -35,9 +35,19 @@
         android:layout_alignParentRight="true"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:textColor="#ffffff"
-        android:background="#000000"
+        android:background="#eeeeee"
         android:text = "@string/session_example_place"
         android:textSize = "25sp"
         />
+
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="0.2dp"
+        android:id="@+id/separator"
+        android:visibility="visible"
+        android:background="@color/olin_blue"
+        android:layout_below="@+id/session_time"/>
+
 </RelativeLayout>
