--- a/OlinJa/src/main/res/values/colors.xml
+++ b/OlinJa/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name = "divider_color">#d9d9d9</color>
 
+    <color name="olin_blue">#075ca5</color>
+
     <color name = "session_panel_checkoff">#99CC00</color>
     <color name = "session_panel_helpMe">#33B5E5</color>
 </resources>
