--- a/OlinJa/src/main/res/layout/session_list_item.xml
+++ b/OlinJa/src/main/res/layout/session_list_item.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:paddingTop="10dp" android:paddingBottom="10dp"
+    android:background="@color/olin_white"
     >
     <TextView
         android:id = "@+id/session_title"
         android:layout_width = "fill_parent"
         android:layout_height = "wrap_content"
+        android:background="@color/olin_silver"
+        android:textColor="@color/olin_white"
+        android:padding="10dp"
         android:text="@string/session_example_title"
-        android:background="#eeeeee"
         android:textSize="25sp"
         />
 
     <TextView
         android:id = "@+id/session_ninja"
         android:layout_below = "@id/session_title"
-        android:layout_marginLeft = "@dimen/session_ninja_left"
+        android:layout_margin="10dp"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text = "@string/session_example_ninja"
@@ -26,6 +30,8 @@
         android:layout_alignBottom="@id/session_ninja"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:text = "@string/session_example_time"
         android:textSize = "@dimen/session_sub_font"
         />
@@ -35,14 +41,14 @@
         android:layout_alignParentRight="true"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:background="#eeeeee"
+        android:textColor="@color/olin_white"
+        android:padding="10dp"
         android:text = "@string/session_example_place"
         android:textSize = "25sp"
         />
 
     <View
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_width="fill_parent"
         android:layout_height="0.2dp"
         android:id="@+id/separator"
