few color alterations

--- a/OlinJa/src/main/res/layout/checked_off.xml
+++ b/OlinJa/src/main/res/layout/checked_off.xml
@@ -6,16 +6,16 @@
     <TextView
         android:id="@+id/checked_off_title"
         android:padding="@dimen/session_title_padding"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
         android:textSize="@dimen/session_font"
         android:text="@string/checked_off_people"
+        android:background="@color/olin_blue"
+        android:textColor="@color/olin_white"
         />
     <ListView
         android:id="@+id/checked_off_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/session_panel_checkoff"
         />
 </LinearLayout>
