--- a/OlinJa/src/main/res/values/colors.xml
+++ b/OlinJa/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name = "divider_color">#d9d9d9</color>
 
     <color name="olin_blue">#075ca5</color>
+    <color name="olin_lightblue">#b2d9fa</color>
     <color name="olin_white">#fdfdfd</color>
     <color name="olin_silver">#c7c7c7</color>
 
