--- a/OlinJa/src/main/res/layout/session_detail_view.xml
+++ b/OlinJa/src/main/res/layout/session_detail_view.xml
@@ -16,9 +16,10 @@
         android:padding="@dimen/session_title_padding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:textColor="@color/olin_white"
         android:textSize="@dimen/session_title_font"
         android:text="@string/session_title_checkoff"
+        android:background="@color/olin_blue"
         />
     <TextView
         android:id = "@+id/checkoff_add_queue"
@@ -35,7 +36,6 @@
         android:layout_alignRight = "@id/center_on_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/session_panel_checkoff"
         />
 
     <TextView
@@ -48,6 +48,7 @@
         android:textColor="@android:color/black"
         android:textSize="@dimen/session_title_font"
         android:text="@string/session_title_helpMe"
+        android:background="@color/olin_lightblue"
         />
 
     <TextView
@@ -65,7 +66,6 @@
         android:layout_alignLeft = "@id/center_on_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/session_panel_helpMe"
         />
 </RelativeLayout>
 
