--- a/OlinJa/src/main/res/layout/session_two_list.xml
+++ b/OlinJa/src/main/res/layout/session_two_list.xml
@@ -14,7 +14,7 @@
         <RelativeLayout
             android:layout_below="@+id/leftside"
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="190dip"
+            android:layout_width="190dp"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true">
 
@@ -22,7 +22,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="#669900"
                 android:id="@+id/topleft">
 
                 <TextView
@@ -32,14 +31,15 @@
                     android:textColor="#ffffff"
                     android:textSize="22sp"
                     android:text="Check-Off"
-                    android:id="@+id/Checkoff" />
+                    android:id="@+id/Checkoff"
+                    android:background="@color/olin_blue"
+                    />
             </LinearLayout>
 
             <ListView
                 android:id="@+id/checkofflist"
                 android:textColor="#ffffff"
                 android:layout_width="fill_parent"
-                android:background="#99CC00"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/topleft"
                 />
@@ -56,14 +56,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="#0099CC"
                 android:id="@+id/topright">
 
                 <TextView
                     android:padding="5dip"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
+                    android:background="@color/olin_lightblue"
                     android:textSize="22sp"
                     android:text="I Need Help!"
                     android:id="@+id/helpme" />
@@ -75,7 +75,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/topright"
-                android:background="#33B5E5"
                 />
         </RelativeLayout>
 
