fixing add buttons

--- a/OlinJa/src/main/res/layout/session_detail_view.xml
+++ b/OlinJa/src/main/res/layout/session_detail_view.xml
@@ -21,14 +21,14 @@
         android:text="@string/session_title_checkoff"
         android:background="@color/olin_blue"
         />
-    <TextView
+    <ImageButton
         android:id = "@+id/checkoff_add_queue"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@id/center_on_me"
-        android:layout_width = "wrap_content"
-        android:padding = "@dimen/session_title_padding"
-        android:layout_height = "wrap_content"
-        android:textSize = "@dimen/session_title_font"
-        android:text = "@string/add_queue"/>
+        android:layout_width = "30dp"
+        android:layout_height = "30dp"
+        android:background="@drawable/plus" />
     <ListView
         android:id="@+id/session_list_checkoff"
         android:layout_below = "@id/session_title_checkoff"
@@ -51,14 +51,15 @@
         android:background="@color/olin_lightblue"
         />
 
-    <TextView
+    <ImageButton
         android:id = "@+id/helpMe_add_queue"
         android:layout_alignParentRight="true"
-        android:layout_width = "wrap_content"
-        android:padding = "@dimen/session_title_padding"
-        android:layout_height = "wrap_content"
-        android:textSize = "@dimen/session_title_font"
-        android:text = "@string/add_queue"/>
+        android:layout_width = "30dp"
+        android:layout_height = "30dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/plus"
+        />
     <ListView
         android:id="@+id/session_list_helpMe"
         android:layout_below = "@id/session_title_helpMe"
