--- a/OlinJa/src/main/res/layout/activity_main.xml
+++ b/OlinJa/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/olin_white"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
