--- a/OlinJa/src/main/res/values/dimens.xml
+++ b/OlinJa/src/main/res/values/dimens.xml
@@ -23,8 +23,11 @@
 
     <dimen name="session_panel_width">180dp</dimen>
     <dimen name="session_title_height">40dp</dimen>
-    <dimen name="session_title_padding">5dp</dimen>
-    <dimen name="session_title_font">26sp</dimen>
+    <dimen name="session_title_padding">10dp</dimen>
+    <dimen name="session_title_font">20sp</dimen>
+
+    <dimen name = "add_button_size">30dp</dimen>
+    <dimen name = "button_margin">5dp</dimen>
 
     <dimen name="login_title">5dp</dimen>
     </resources>
