Finishe dSession Activity settings

--- a/OlinJa/src/main/res/menu/session.xml
+++ b/OlinJa/src/main/res/menu/session.xml
@@ -2,9 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
 
-    <item android:id="@+id/action_checked"
+    <item android:id="@+id/settings"
         android:orderInCategory="100"
-        android:title="Checked"
-        android:text="Checked"
+        android:title="Settings"
+        android:text="Settings"
         android:showAsAction="always"/>
 </menu>
