Move all tof the dialogs to own classes

--- a/OlinJa/src/main/res/layout/q_list_item.xml
+++ b/OlinJa/src/main/res/layout/q_list_item.xml
@@ -9,8 +9,7 @@
         android:layout_width = "@dimen/profile_size"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/signin_user"
-        android:padding = "@dimen/session_title_padding"
-        android:background = "@drawable/unknown"
+        android:layout_margin = "@dimen/session_title_padding"
         />
 
     <TextView
