--- a/OlinJa/src/main/res/layout/ninja_click_dialog.xml
+++ b/OlinJa/src/main/res/layout/ninja_click_dialog.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background = "@android:color/white"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
