settings dialog for help session has buttons

--- a/OlinJa/src/main/res/layout/ninja_click_dialog.xml
+++ b/OlinJa/src/main/res/layout/ninja_click_dialog.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text = "@string/notify"/>
+        android:text = "@string/remove"/>
     <View
         android:layout_width = "match_parent"
         android:layout_height = "1dp"
