--- a/OlinJa/src/main/res/layout/q_list_item.xml
+++ b/OlinJa/src/main/res/layout/q_list_item.xml
@@ -3,13 +3,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <View
+        android:layout_marginLeft = "7dp"
+        android:layout_marginTop = "8dp"
+        android:layout_height = "@dimen/profile_size_buffer"
+        android:layout_width = "46dp"
+        android:background = "@color/olin_silver"
+        android:layout_alignParentLeft="true"
+        />
     <ImageView
         android:id="@+id/user_profile"
+        android:layout_marginLeft = "5dp"
         android:layout_height = "@dimen/profile_size"
         android:layout_width = "@dimen/profile_size"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/signin_user"
-        android:layout_margin = "@dimen/session_title_padding"
+        android:layout_marginRight = "@dimen/session_title_padding"
+        android:layout_marginTop = "@dimen/session_title_padding"
+        android:layout_marginBottom = "@dimen/session_title_padding"
         />
 
     <TextView
@@ -36,8 +47,8 @@
         android:id = "@+id/help_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf = "@id/help_button"
+        android:layout_alignLeft = "@id/person_name"
+        android:layout_alignParentBottom="true"
         android:textSize = "@dimen/session_sub_font"
-        android:layout_alignBottom = "@id/help_button"
         android:text = "@string/dialog_title"/>
 </RelativeLayout>
