--- a/OlinJa/src/main/res/layout/check_dialog.xml
+++ b/OlinJa/src/main/res/layout/check_dialog.xml
@@ -33,4 +33,34 @@
         android:layout_width = "match_parent"
         android:layout_height = "2dp"
         android:background = "@color/olin_lightblue"/>
+    <RelativeLayout
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/save_question"
+            android:gravity = "center"
+            android:layout_height = "@dimen/button_height"
+            android:layout_width = "@dimen/button_width"
+            android:background = "@android:color/transparent"
+            android:text="Save Question"/>
+        <View
+            android:id = "@+id/button_divider"
+            android:layout_marginTop = "@dimen/divider_top"
+            android:layout_width = "@dimen/divider_height"
+            android:layout_toRightOf = "@id/save_question"
+            android:layout_height = "@dimen/button_divider"
+            android:background = "@android:color/black"
+            />
+        <Button
+            android:id="@+id/cancel_question"
+            android:gravity = "center"
+            android:layout_height = "@dimen/button_height"
+            android:layout_width = "@dimen/button_width"
+            android:background = "@android:color/transparent"
+            android:layout_toRightOf = "@id/button_divider"
+            android:text="Cancel"/>
+    </RelativeLayout>
+
 </LinearLayout>
