--- a/OlinJa/src/main/res/layout/session_list_item.xml
+++ b/OlinJa/src/main/res/layout/session_list_item.xml
@@ -1,59 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:paddingTop="10dp" android:paddingBottom="10dp"
-    android:background="@color/olin_white"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:paddingBottom="0dp"
+    android:id = "@+id/container_session"
     >
+    <ImageView
+        android:id = "@+id/ninja_profile"
+        android:layout_height = "80dp"
+        android:layout_width = "80dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:paddingTop = "5dp"
+        android:paddingBottom = "5dp"
+        android:layout_marginRight="5dp"
+        />
+
     <TextView
         android:id = "@+id/session_title"
+        android:layout_toRightOf="@id/ninja_profile"
+        android:layout_alignTop="@id/ninja_profile"
         android:layout_width = "fill_parent"
+        android:background="@android:color/holo_blue_dark"
         android:layout_height = "wrap_content"
-        android:background="@color/olin_silver"
         android:textColor="@color/olin_white"
-        android:padding="10dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft = "10dp"
         android:text="@string/session_example_title"
-        android:textSize="25sp"
+        android:textSize="24sp"
         />
 
     <TextView
         android:id = "@+id/session_ninja"
-        android:layout_below = "@id/session_title"
-        android:layout_margin="10dp"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text = "@string/session_example_ninja"
-        android:textSize = "@dimen/session_sub_font"/>
-
-    <TextView
-        android:id = "@+id/session_time"
         android:layout_alignParentRight="true"
-        android:layout_alignBottom="@id/session_ninja"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:text = "@string/session_example_time"
-        android:textSize = "@dimen/session_sub_font"
-        />
-
-    <TextView
-        android:id = "@+id/session_place"
-        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@id/session_title"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:textColor="@color/olin_white"
-        android:padding="10dp"
-        android:text = "@string/session_example_place"
-        android:textSize = "25sp"
+        android:paddingBottom="5dp"
+        android:layout_marginRight = "5dp"
+        android:text="@string/session_example_ninja"
+        android:textSize="18sp"
         />
 
-    <View
-        android:layout_marginTop="10dp"
+    <TextView
+        android:id="@+id/session_details"
         android:layout_width="fill_parent"
-        android:layout_height="0.2dp"
-        android:id="@+id/separator"
-        android:visibility="visible"
-        android:background="@color/olin_blue"
-        android:layout_below="@+id/session_time"/>
+        android:layout_height="wrap_content"
+        android:layout_alignRight = "@id/session_ninja"
+        android:layout_marginRight = "5dp"
+        android:layout_alignLeft="@id/session_title"
+        android:layout_below="@id/session_title"
+        android:textSize = "@dimen/session_font"
+        android:background="@android:color/white"
+        android:textColor = "@android:color/black"/>
+    <View
+        android:id="@+id/session_end"
+        android:layout_below = "@id/session_details"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        />
+
+
 
 </RelativeLayout>
